; ModuleID = '/home/carl/AnghaBench/openpilot/panda/tests/safety/extr_test.c_init_tests_cadillac.c'
source_filename = "/home/carl/AnghaBench/openpilot/panda/tests/safety/extr_test.c_init_tests_cadillac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@cadillac_torque_driver = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@cadillac_desired_torque_last = common dso_local global i64* null, align 8
@cadillac_rt_torque_last = common dso_local global i64 0, align 8
@cadillac_ts_last = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_tests_cadillac() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @init_tests()
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cadillac_torque_driver, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cadillac_torque_driver, i32 0, i32 0), align 8
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %11, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 4
  br i1 %5, label %6, label %14

6:                                                ; preds = %3
  %7 = load i64*, i64** @cadillac_desired_torque_last, align 8
  %8 = load i32, i32* %1, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i64, i64* %7, i64 %9
  store i64 0, i64* %10, align 8
  br label %11

11:                                               ; preds = %6
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %1, align 4
  br label %3

14:                                               ; preds = %3
  store i64 0, i64* @cadillac_rt_torque_last, align 8
  store i64 0, i64* @cadillac_ts_last, align 8
  %15 = call i32 @set_timer(i32 0)
  ret void
}

declare dso_local i32 @init_tests(...) #1

declare dso_local i32 @set_timer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
